make site more better good

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "format": "prettier --write \"**/*.{md,css,js,json}\""
+    "format": "prettier --write \"**/*.{md,css,js,json}\"",
+    "server": "bundle exec jekyll serve",
+    "pnpm-install": "pnpm install"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
